--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/slider": "5.0.1",
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.9.0",
+    "@tanstack/react-query": "^5.90.2",
     "expo": "~54.0.12",
     "expo-audio": "~1.0.13",
     "expo-constants": "~18.0.9",
