--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-audio": "~1.0.13",
     "expo-constants": "~18.0.9",
     "expo-file-system": "~19.0.16",
+    "expo-localization": "~15.0.3",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
