--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.90.2",
+    "crypto-js": "^4.2.0",
     "expo": "~54.0.12",
     "expo-audio": "~1.0.13",
+    "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.9",
     "expo-file-system": "~19.0.16",
     "expo-font": "~14.0.8",
